
syntax = "proto3";

option go_package = "./go-grpc-api-gateway/pkg/product/pb";  // 当前目录下

package product;


service ProductService {
    rpc CreatePorduct (CreateProductRequest) returns (CreateProductResponse) {}
    rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
    rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse) {}
}


// 创建商品
message CreateProductRequest {
    string name = 1;
    int64 stock = 2;
    int64 price = 3;
}
message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;    
}

// 查找单个商品
message FindOneData {
    int64 id = 1;
    string name = 2;
    string sku = 3;
    int64 stock = 4;
    int64 price = 5;
}
message FindOneRequest {
    int64 id = 1;
}
message FindOneResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}

// 扣减商品库存
message DecreaseStockRequest {
    int64 id = 1;
    int64 order_id = 2;
}
message DecreaseStockResponse {
    int64 status = 1;
    string error = 2;
}   